[package]
name = "btleplug-c"
edition = "2021"

[lib]
name = "btleplug_c"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.5"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
futures = "0.3.30"
log = "0.4.20"
simple-logging = "2.0.2"
